spec/e2e/operator/add_nil_nil.lit
nil + nil; # error: [line 1] Runtime error: Undefined operator + for Nil and Nil.
